2009-10-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-glue.cpp: We might need the current plugin (NPP->pdata) during
	plugin shutdown (to report errors to js in case of any errors).
	
	* plugin-class.cpp|h|in.h:
	Added MoonlightScriptControlObject::[Pre|Post]SwitchPlugin methods: stores
	the data (event handlers) we need to copy over from one plugin instance to
	the next when the source changes. Also make sure to delete all current 
	event handlers / proxies, since the root npobjects are not recreated. 
	EventListenerProxy: added GetCallback and IsFunc accessors. 
	MoonlightObject: Add a SetPlugin method that allows moving MoonlightObjects
	from one PluginInstance to another.
	
	* plugin.cpp|h:
	Added a PluginInstance::Recreate method that recreates the PluginInstance
	when the source changes. Remove unused parameter to PluginInstance ctor. 
	Keep track whether the window has been created or not (used to not recreate
	the window, since it moves from one PluginInstance to another).

	r: spouliot

2009-10-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-class.h.in: Update with recent changes to plugin-class.h.

	r: alan

2009-10-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-class.[g.]cpp|h: Store a reference to the PluginInstance on
	all MoonlightObjects instead of the NPP instance, since we'll soon
	have more than one PluginInstance per NPP instance.

	r: spouliot

2009-10-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp|h:
	* plugin-class.h: Use the proper type for the content and settings
	objects.

	r: spouliot

2009-10-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* windowless.cpp: Don't access the deployment field, use the
	new SetCurrentDeployment method.

	r: spouliot

2009-10-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp|h: Move all managed code handling to Deployment.

	r: spouliot

2009-10-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>
